Perf: optimize search performance and quality (#32)